--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.15",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.6.2",
+    "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.15"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.1",
+    "react-scroll": "^1.9.3",
+    "react-simple-typewriter": "^5.0.1",
+    "tailwindcss": "^4.0.15",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
